tests/should_succeed/public_hello_printer.jou
import "stdlib/io.jou"

@public
def print_hello() -> None:
    printf("Hello World!\n")

def main() -> int:
    print_hello()  # Output: Hello World!
    return 0
