tests/syntax_error/mark_print_as_public.jou
def main() -> None:
    @public  # Error: the @public decorator cannot be used here
    printf("Hi\n")
